// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Alert /> should handle props 1`] = `
<div>
  <div
    class="overlay"
    data-testid="alert:overlay"
    style="z-index: 100;"
  >
    <div
      class="alert test-class"
      data-testid="alert"
    >
      <div
        class="root size-m header"
        style="height: 64px;"
      >
        <div
          class="main"
        >
          <div
            class="title"
          >
            Hello, world!
          </div>
          <div
            class="subtitle"
          >
            Subtitle text
          </div>
        </div>
      </div>
      <div
        class="main"
      >
        Main content
      </div>
      <div
        class="inner-border-top"
      >
        Footer content
      </div>
    </div>
  </div>
</div>
`;

exports[`<Alert /> should renders without props 1`] = `
<div>
  <div
    class="overlay"
    data-testid="alert:overlay"
    style="z-index: 100;"
  >
    <div
      class="alert"
      data-testid="alert"
    >
      <div
        class="main"
      />
    </div>
  </div>
</div>
`;
